--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=learning_navigator
 server.port=8081
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/test_db
-spring.datasource.username=assessment
-spring.datasource.password=redrum
+spring.datasource.username=root
+spring.datasource.password=Test@1234
 spring.jpa.hibernate.ddl-auto=update
